# chesscpp

./: CMakeLists.txt  LICENSE  README.md
inc/: AI.h  Application.h  Board.h  Defs.h  Game.h  Macros.h  Pieces.h  Window.h  load.fen
src/: AI.cpp  Application.cpp  Board.cpp  Game.cpp  Pieces.cpp  Window.cpp  main.cpp
test/: CMakeLists.txt  Tests.cpp  test.fen
